# mktoc

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  flake.nix  justfile
.github/workflows/: bench.yml  build_nix.yml  clippy.yml  release.yml  test.yml
assets/: social-banner.afdesign
benches/: mktoc_benchmark.rs
docs/: index.html
docs/benches/criterion/mktoc_ tests_files_README_01.md/base/: estimates.json  raw.csv  sample.json  tukey.json
docs/benches/criterion/mktoc_ tests_files_README_01.md/change/: estimates.json
docs/benches/criterion/mktoc_ tests_files_README_01.md/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
docs/benches/criterion/mktoc_ tests_files_README_01.md/report/: index.html
docs/benches/criterion/mktoc_ tests_files_README_02.md/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
docs/benches/criterion/mktoc_ tests_files_README_02.md/change/: estimates.json
docs/benches/criterion/mktoc_ tests_files_README_02.md/new/: estimates.json  raw.csv  sample.json  tukey.json
docs/benches/criterion/mktoc_ tests_files_README_02.md/report/: index.html
docs/benches/criterion/mktoc_ tests_files_README_03.md/base/: estimates.json  raw.csv  sample.json  tukey.json
docs/benches/criterion/mktoc_ tests_files_README_03.md/change/: estimates.json
docs/benches/criterion/mktoc_ tests_files_README_03.md/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
docs/benches/criterion/mktoc_ tests_files_README_03.md/report/: index.html
docs/benches/criterion/report/: index.html
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/mktoc/: all.html  fn.make_toc.html  index.html  sidebar-items.js
docs/doc/src/mktoc/: lib.rs.html
helpers/: coverage.sh
src/: bin.rs  lib.rs  main.rs
tests/files/: README-read_no_write.md  README_01.md  README_02.md  README_03.md  README_04_code_block_issues.md  README_05_env_test.md  README_06_special_chars.md  README_07_rust-code.md  README_08_inline_config.md  README_09_wrap_in_details.md  README_10_link-in-headings.md  README_11-duplicate-headings.md
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
