[package]
name = "mktoc"
description = "Generate Table of Contents from Markdown files"
license = "MIT"
version = "3.2.0"
authors = ["Kevin Gimbel <hallo@kevingimbel.com>"]
edition = "2018"
repository = "https://github.com/kevingimbel/mktoc"

[lib]
name = "mktoc"
path = "src/lib.rs"

[[bin]]
name = "mktoc"
path = "src/bin.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "mktoc_benchmark"
harness = false
