[package]
name = "mktoc"
description = "Generate Table of Contents from Markdown files"
license = "MIT"
version = "5.1.0"
authors = ["Kevin Gimbel <kevin@gimbel.dev>"]
edition = "2024"
repository = "https://github.com/kevingimbel/mktoc"
rust-version = "1.91.1"
exclude = [
    ".github",
    "assets",
    "benches",
    "helpers",
    "tests",
    ".gitignore",
    "*.nix",
    ".pre-commit*",
    "flake.lock",
    "justfile"
]

[lib]
name = "mktoc"
path = "src/lib.rs"

[[bin]]
name = "mktoc"
path = "src/bin.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "mktoc_benchmark"
harness = false
