[package]
name = "webtoc"
version = "0.4.0"
authors = ["Kevin Gimbel <kevin@gimbel.dev>"]
description = "mktoc on the web, thanks to WebAssembly!"
license = "MIT/Apache-2.0"
repository = "https://github.com/KevinGimbel/mktoc"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mktoc = { path = "../" }
wasm-bindgen = "0.2.106"
